--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-Welcome to Maven Wep app
+Welcome to Maven Wep app from JENKINS
 </body>
 </html>
